Fix up environment section

--- a/bibdata.bib
+++ b/bibdata.bib
@@ -13382,10 +13382,48 @@ address = {Antwerp, Belgium},
 }
 
 @TechReport{Cappos_TR_08,
-   Author       = "Justin Cappos and Justin Samuel and Scott Baker and John Hartman",
+   Author       = "{Justin Cappos and Justin Samuel and Scott Baker and John Hartman}",
    Title        = "{Package Management Security}",
-   Institution  = "Department of Computer Science, University of Arizona",
-   Number       = "TR--08--02",
+   Institution  = "{Department of Computer Science, University of Arizona}",
+   Number       = "{TR--08--02}",
    Year         = 2008
 }
 
+@Misc{UnlinkStandard,
+  key = "UnlinkStandard",
+  title = "{The Open Group Base Specifications Issue 6}",
+  note = "{\url{http://pubs.opengroup.org/onlinepubs/009695399/functions/unlink.html}}",
+  year = 2004
+}
+
+@Misc{EXT4Layout,
+  key = "EXT4Layout",
+  title = "{Ext4 Disk Layout}",
+  note = "{\url{https://ext4.wiki.kernel.org/index.php/Ext4\_Disk\_Layout}}"
+}
+
+@Misc{AppleHFS,
+  key = "AppleHFS",
+  title = "{Apple File System Guide}",
+  note = "{\url{https://developer.apple.com/library/content/documentation/FileManagement/Conceptual/APFS\_Guide/FAQ/FAQ.html}}",
+}
+
+@ARTICLE{ArbitraryPrecision, 
+author={K. R. Ghazi and V. Lefevre and P. Theveny and P. Zimmermann}, 
+journal={Computing in Science Engineering}, 
+title={Why and How to Use Arbitrary Precision}, 
+year={2010}, 
+volume={12}, 
+number={3}, 
+pages={5-5}, 
+month={May},}
+
+@Misc{Microarch,
+  author = "{Fog, Agner}",
+  key = "{Microarch}",
+  title = "{The microarchitecture of Intel, AMD and VIA CPUs An optimization guide for assembly programmers and compiler makers}",
+  institution = "{Technical University of Denmark}",
+  note = "{\url{http://www.agner.org/optimize/microarchitecture.pdf"}}",
+  year = 2017,
+}
+  
