Cite "Write Once, Debug Everywhere"

--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -45,7 +45,7 @@ bugs are not discovered earlier.
 Even specialized ``Write-Once, Run Anywhere'' environments, such as the Java 
 Runtime Environment, that attempt to hide these environmental differences are 
 not perfect, leading them to be rechristened ``Write-Once, Debug 
-Everywhere'' \cappos{cite}.
+Everywhere''~\cite{WODE}.
 
 %What is needed is a strategy for executing an application in such a way that
 %it can experience the anomalies of a deployment
