--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -1,7 +1,6 @@
 \section{Introduction}
 
-\cappos{perhaps include this quote}
-“No Battle Plan Survives Contact With the Enemy” Helmuth von Moltke
+\textit{No Battle Plan Survives Contact With the Enemy --- Helmuth von Moltke}
 
 No matter how well an application is tested before being released, new 
 bugs always seem to be found after deployment.  \cappos{quotes about this.
