Microsoft text and citations

--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -3,9 +3,12 @@
 \textit{No Battle Plan Survives Contact With the Enemy --- Helmuth von Moltke}
 
 No matter how well an application is tested before being released, new 
-bugs always seem to be found after deployment.  \cappos{quotes about this.
-1/2 of MS employees are testers, formally verified systems failing in practice,
-etc.}
+bugs always seem to be found after deployment.
+Microsoft employs thousands of engineers with nearly a 1:1 ratio of testers to
+developers\cite{Page2009}.  In spite of this enormous emphasis on testing 39
+bugs resulting in security vulnerabilities were reported in Microsoft Office in
+2017 (27 of which were rated severe)~\cite{OfficeBugs2017}.  Clearly, bugs are
+being missed in testing only to be found in deployment.
 
 A large reason for the challenges discovered during deployment is that the 
 application is running in a diverse set of different \emph{environments}.  
