--- a/bibdata.bib
+++ b/bibdata.bib
@@ -8562,18 +8562,17 @@ URL="http://tools.ietf.org/html/rfc5128"
     url = {http://standards.ieee.org/about/get/802/802.3.html},
     year = {2008}
 }
+
 @book{Page2009,
-    author = {Page, A. and Johnston, K. and Rollinson, B.},
-    booktitle = {Online},
-    citeulike-article-id = {10503834},
-    citeulike-linkout-0 = {http://books.google.com/books?hl=en\&\#38;lr=\&\#38;id=mFketWnCDhoC\&\#38;oi=fnd\&\#38;pg=PT1\&\#38;dq=How+We+Test+Software+at+Microsoft\&\#38;ots=TiTK0cK1B\_\&\#38;sig=Y7qXadWEhw6vNo2l9K45ILFv\_2c},
-    posted-at = {2012-03-27 21:17:39},
-    priority = {2},
-    title = {{How we test software at Microsoft}},
-    url = {http://books.google.com/books?hl=en\&amp;lr=\&amp;id=mFketWnCDhoC\&amp;oi=fnd\&amp;pg=PT1\&amp;dq=How+We+Test+Software+at+Microsoft\&amp;ots=TiTK0cK1B\_\&amp;sig=Y7qXadWEhw6vNo2l9K45ILFv\_2c},
-    year = {2008},
-   publisher={{Microsoft Press}}
+  title={How We Test Software at Microsoft{\textregistered}},
+  author={Page, A. and Johnston, K. and Rollison, B.},
+  isbn={9780735638310},
+  series={Developer Best Practices},
+  url={https://books.google.com/books?id=mFketWnCDhoC},
+  year={2009},
+  publisher={Microsoft Press}
 }
+
 @book{massol2003,
     address = {Greenwich, Connecticut, USA},
     author = {Massol, Vincent and Husted, Ted},
@@ -11603,18 +11602,6 @@ URL="http://tools.ietf.org/html/rfc5128"
     url = {http://standards.ieee.org/about/get/802/802.3.html},
     year = {2008}
 }
-@book{Page2009,
-    author = {Page, A. and Johnston, K. and Rollinson, B.},
-    booktitle = {Online},
-    citeulike-article-id = {10503834},
-    citeulike-linkout-0 = {http://books.google.com/books?hl=en\&\#38;lr=\&\#38;id=mFketWnCDhoC\&\#38;oi=fnd\&\#38;pg=PT1\&\#38;dq=How+We+Test+Software+at+Microsoft\&\#38;ots=TiTK0cK1B\_\&\#38;sig=Y7qXadWEhw6vNo2l9K45ILFv\_2c},
-    posted-at = {2012-03-27 21:17:39},
-    priority = {2},
-    title = {{How we test software at Microsoft}},
-    url = {http://books.google.com/books?hl=en\&amp;lr=\&amp;id=mFketWnCDhoC\&amp;oi=fnd\&amp;pg=PT1\&amp;dq=How+We+Test+Software+at+Microsoft\&amp;ots=TiTK0cK1B\_\&amp;sig=Y7qXadWEhw6vNo2l9K45ILFv\_2c},
-    year = {2008},
-   publisher={{Microsoft Press}}
-}
 @book{massol2003,
     address = {Greenwich, Connecticut, USA},
     author = {Massol, Vincent and Husted, Ted},
@@ -13425,5 +13412,11 @@ month={May},}
   institution = "{Technical University of Denmark}",
   note = "{\url{http://www.agner.org/optimize/microarchitecture.pdf"}}",
   year = 2017,
+}
+
+@Misc{OfficeBugs2017,
+  key = "OfficeBugs2017",
+  title = "{Microsoft Office Security Vulnerabilities Published In 2017}",
+  note = "{\url{https://www.cvedetails.com/vulnerability-list/vendor\_id-26/product\_id-320/year-2017/Microsoft-Office.html}}",
 }
   
