--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -168,22 +168,22 @@ calls, before the application is deployed.
 %environment by creating a simulation of the environment using this
 %technique and executing the application within it.
 
-\cappos{I would cut this.}
-Here is how CrashSimulator works in detail. Suppose an application
-$A$ has failed due to a newly discovered environmental anomaly.  A
-developer using CrashSimulator can then test whether other
-applications $A_1$, $A_2,\dots$ suffer from the same problem.  The
-first step is to run these other applications in their development
-environment in order to gather traces.  Next, she writes a simple
-script to evaluate whether traces are relevant to this anomaly and to
-mutate traces to give the appearance that they were generated in the
-anomalous environment.  Finally, she attempts to replay the modified
-trace, i.e. allow the application to run under the control of
-CrashSimulator, substituting the system call return values (and
-side-effects) that would occur in the anomalous environment. In
-parallel with the replay, a checker will run under the control of
-CrashSimulator that decides whether the application's behavior is
-indicative of a fault.
+%\cappos{I would cut this.}
+%Here is how CrashSimulator works in detail. Suppose an application
+%$A$ has failed due to a newly discovered environmental anomaly.  A
+%developer using CrashSimulator can then test whether other
+%applications $A_1$, $A_2,\dots$ suffer from the same problem.  The
+%first step is to run these other applications in their development
+%environment in order to gather traces.  Next, she writes a simple
+%script to evaluate whether traces are relevant to this anomaly and to
+%mutate traces to give the appearance that they were generated in the
+%anomalous environment.  Finally, she attempts to replay the modified
+%trace, i.e. allow the application to run under the control of
+%CrashSimulator, substituting the system call return values (and
+%side-effects) that would occur in the anomalous environment. In
+%parallel with the replay, a checker will run under the control of
+%CrashSimulator that decides whether the application's behavior is
+%indicative of a fault.
 
 %Given that we have a simulation of a given environment, the next step is to make decisions about whether an application
 %is executing correctly in this environment.  The set of interactions (i.e. system calls) necessary to correctly perform
