Cite differing network behavior

--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -13,9 +13,9 @@ being missed in testing only to be found in deployment.
 A large reason for the challenges discovered during deployment is that the 
 application is running in a diverse set of different \emph{environments}.  
 Changing the operating system can cause new bugs to occur (cites), file
-systems have quite different behavior from each other (cites), and differences
+systems have quite different behavior from each other~\cite{EXT4Layout}\cite{AppleHFS}, and differences
 in network behavior can be substantial, even in situations where the network
-type or even the adaptor are identical (cites).  Of course, many applications
+type or even the adaptor are identical~\cite{vbox}.  Of course, many applications
 seek to work across different operating systems, network types, etc., and this
 all greatly exaserbates the problems in ensuring the application functions
 correctly.
