Cite os differences

--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -12,7 +12,7 @@ being missed in testing only to be found in deployment.
 
 A large reason for the challenges discovered during deployment is that the 
 application is running in a diverse set of different \emph{environments}.  
-Changing the operating system can cause new bugs to occur (cites), file
+Changing the operating system can cause new bugs to occur~\cite{LinuxGlibcChanges}, file
 systems have quite different behavior from each other~\cite{EXT4Layout}\cite{AppleHFS}, and differences
 in network behavior can be substantial, even in situations where the network
 type or even the adaptor are identical~\cite{vbox}.  Of course, many applications
