--- a/bibdata.bib
+++ b/bibdata.bib
@@ -13389,6 +13389,12 @@ address = {Antwerp, Belgium},
   note = "{\url{https://developer.apple.com/library/content/documentation/FileManagement/Conceptual/APFS\_Guide/FAQ/FAQ.html}}",
 }
 
+@Misc{LinuxGlibcChanges,
+  key = "LinuxGlibcChanges",
+  title = "Linux and glibc API changes",
+  note = "{\url{http://man7.org/tlpi/api\_changes/\#Linux-kernel}}"
+}
+
 @ARTICLE{ArbitraryPrecision, 
 author={K. R. Ghazi and V. Lefevre and P. Theveny and P. Zimmermann}, 
 journal={Computing in Science Engineering}, 
