--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -89,8 +89,8 @@ testing for them in other applications.
 
 As a result, an environmental bug that is detected in one application can be 
 detected by CrashSimulator in other applications.  This merely requires the 
-environmental bug to be added to CrashSimulator and then any application can
-be run in CrashSimulator and tested for the bug with no added effort.  Thus,
+environmental bug to be added to CrashSimulator. Once this is done, any application can
+be tested for the bug using CrashSimulator with no added effort.  Thus,
 CrashSimulator can be applied to an application and can detect the full 
 suite of environmental bugs it is aware of.  This is somewhat analagous to
 CrashSimulator automatically creating unit tests for all environments the 
