--- a/CSAbstract.tex
+++ b/CSAbstract.tex
@@ -11,7 +11,7 @@
 %  the environment
 %  into which an application is introduced can be a source of flaws that remain
 %  hidden until after a costly deployment.
-
+  !!SENTENCE HERE ABOUT MAPPING ANOMALIES TO SYSTEM CALL RESULTS!!!
   CrashSimulator is a technique and tool that uses information about how 
   different environments differ to identify incorrect application behavior 
   caused by unhandled anomalous environmental conditions before the 
