Combine First paragraph with ClusterHQ results

--- a/bibdata.bib
+++ b/bibdata.bib
@@ -13414,9 +13414,9 @@ month={May},}
   year = 2017,
 }
 
-@Misc{OfficeBugs2017,
-  key = "OfficeBugs2017",
-  title = "{Microsoft Office Security Vulnerabilities Published In 2017}",
-  note = "{\url{https://www.cvedetails.com/vulnerability-list/vendor\_id-26/product\_id-320/year-2017/Microsoft-Office.html}}",
+@Misc{kb4056892,
+  title = "{/usr/lib/i386-linux-gnu}",
+  note = "{\url{https://support.microsoft.com/en-us/help/4056892/windows-10-update-kb4056892}}"
 }
+
   
