--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -4,10 +4,25 @@
 
 No matter how well an application is tested before being released, new 
 bugs always seem to be found after deployment.
+A recent survey conducted by
+ClusterHQ~\cite{ClusterHQSurvey} confirmed that application developers
+spend a significant portion of their time debugging errors that are only discovered
+in production.  The survey participants cited the inability to
+recreate production environments for testing as the main reason why
+bugs are not discovered earlier.
+Putting forward enormous developer effort
+may be insufficient to uncover
+these bugs before deployment.
 Microsoft employs thousands of engineers with nearly a 1:1 ratio of testers to
-developers\cite{Page2009}.  In spite of this enormous emphasis on testing 39
-bugs resulting in security vulnerabilities were reported in Microsoft Office in
-2017 (27 of which were rated severe)~\cite{OfficeBugs2017}.  Clearly, bugs are
+developers\cite{Page2009}.
+In spite of this enormous emphasis on testing a recent Windows Update released
+in response to the Spectre Intel CPU vulnerability resulted in machines with
+certain hardware configurations being rendered unbootable~\cite{kb4056892}.
+Even specialized ``Write-Once, Run Anywhere'' environments, such as the Java
+Runtime Environment, that attempt to hide these environmental differences are
+not perfect, leading them to be rechristened ``Write-Once, Debug
+Everywhere''~\cite{WODE}.
+Clearly, bugs are
 being missed in testing only to be found in deployment.
 
 A large reason for the challenges discovered during deployment is that the 
@@ -28,7 +43,7 @@ environments.  Whether due to a failure to adhere to
 standards or developer error, the result is the same: the software 
 fails because of unanticipated environmental conditions.
 
-The conditions referred to here, which can include API behavior
+\preston{The conditions referred to here, which can include API behavior
 differences, variations in network performance, or peculiarities in
 filesystem state, all
 can easily go unnoticed
@@ -38,16 +53,8 @@ across every possible combination of hardware and software on which it
 is expected to run. Moreover, developers are often unaware
 of particular types of environmental anomalies, and their
 applications contain environment-dependent bugs that are only
-detected \emph{after deployment}. A recent survey conducted by
-ClusterHQ~\cite{ClusterHQSurvey} confirmed that application developers
-spend a significant portion of their time debugging errors that are only discovered
-in production.  The survey participants cited the inability to
-recreate production environments for testing as the main reason why
-bugs are not discovered earlier.
-Even specialized ``Write-Once, Run Anywhere'' environments, such as the Java 
-Runtime Environment, that attempt to hide these environmental differences are 
-not perfect, leading them to be rechristened ``Write-Once, Debug 
-Everywhere''~\cite{WODE}.
+detected \emph{after deployment}.}
+
 
 %What is needed is a strategy for executing an application in such a way that
 %it can experience the anomalies of a deployment
